# libADLMIDI

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
CaptureOPL/: CMakeLists.txt  CaptureOPL.cpp  CaptureOPL.vcxproj  testfile-credit.txt
CaptureOPL/OPBinaryLib/: CMakeLists.txt
include/: adlmidi.h
src/: adlmidi_opl3.cpp
src/chips/: capture_cb.cpp  capture_cb.hpp  capture_opl3.cpp  capture_opl3.hpp
utils/capture_opl/: CMakeLists.txt  CaptureOPL.cpp  CaptureOPL.vcxproj.filters  README.md
